# scraping_athenas

./: README.md  athenas.db  create_tables.py  main.py  pyproject.toml  requirements.txt
app/api/v1/: routers.py
app/api/v1/routes/: products.py  user.py
app/core/: deps.py  oauth2.py  security.py  settings.py
app/db/: session.py
app/exceptions/: exception_auth.py
app/helpers/: scrappy.py
app/models/: __init__.py  products.py  user.py
app/schemas/: schema_auth.py  schema_user.py
