[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["havokz <matheusfeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
passlib = "^1.7.4"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
sqlalchemy = { extras = ["aiosqlite"], version = "^2.0.22" }
pydantic-settings = "^2.0.3"
pydantic = { extras = ["email"], version = "^2.4.2" }
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"
selenium = "^4.14.0"
undetected-chromedriver = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
